--- a/works/Petclub/index.html
+++ b/works/Petclub/index.html
@@ -132,7 +132,7 @@
         <div class="container">
             <h2 class="color1 header font1 text-center text-uppercase">our initiative</h2>
             <p class="font_size_1 font4 color2 text-center mb-5 common_p">Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-            <div class="one-time inititative_slider">
+            <div class="initiative_slider inititative_slider">
                 <div class="row d-flex">
                     <div class="col-lg-6 col-md-10 col-sm-10 offset-md-1 offset-lg-0 offset-sm-1 pt-md-0 ">
                         <img src="image/initiative.png" class="img-fluid" alt="">
@@ -322,7 +322,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-5 col-md-10 col-sm-10 offset-lg-1 offset-md-1 image position-relative">
-                        <div class="img slider-for">
+                        <div class="img test_slide_two">
                             <div class="col-lg-6 col-md-4 col-sm-4">
                                 <img src="image/testimonial.png" class="" alt="">
                             </div>
@@ -332,11 +332,10 @@
                             <div class="col-lg-6 col-md-4 col-sm-4">
                                 <img src="image/testimonial.png" class="" alt="">
                             </div>
-
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-10 col-sm-10 col-12">
-                        <div class="review text-center slider-nav">
+                        <div class="review text-center test_slide_one">
                             <div>
                                 <div>
                                     <h3 class="color1 font_size_1 font2">Jhone Edison</h3>
@@ -401,12 +400,14 @@
         </div>
     </footer>
 
-    <script type="text/javascript" src="js/jqurey.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/slick.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+
+
+    <script src="js/jquery_1.12.4.js"></script>
+    <script src="js/jquery_waypoints.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
-    <script type="text/javascript" src="js/custom.js"></script>
+    <script src="js/custom.js"></script>
 
 </body>
 
