--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                             </div>
                             <div class="contact-info">
                                 <a href="mailto:marufajhuma1@gmail.com">
-                                    <p class="d-inline-block"><span class="ti-email"></span>Marufajhuma1@gmail.com</p>
+                                    <p class="d-inline-block"><span class="ti-email"></span>Click here to email me</p>
                                 </a>
                             </div>
                         </div>
